--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.1.7-alpha.3",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
